# extensive

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  cabal.project  centre.hs  default.nix  electro.hs  extensive.cabal  extensive.nix  gorbachev.yaml  inverse.hs  jacobian.hs  makefile  plot.r  stack.yaml  sym3.txt  symmetric.hs  symmetric.tex
app/: arbitrary-su2.hs  arbitrary-su3.hs  jacobian.hs  permutation.hs  su3.hs
src/Numeric/: Extensive.hs  Quaternion.hs  SU3.hs
src/Numeric/Extensive/: Core.hs  Inverse.hs  Inverse2.hs  Print.hs
