name:                extensive
version:             0.1.0.0
synopsis:            Linear algebra following Anders Kock
-- description:
license:             BSD3
license-file:        LICENSE
author:              Finlay Thompson
maintainer:          finlay.thompson@gmail.com
copyright:           Finlay Thompson
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Extensive
                     , Numeric.Quaternion
                     , Numeric.Extensive.Core
                     , Numeric.Extensive.Inverse
                     , Numeric.Extensive.Print
  -- other-modules:
  build-depends:       base,
                       algebra,
                       QuickCheck,
                       mtl,
                       pretty,
                       boxes
  hs-source-dirs:      src

  ghc-options: -Wall -fno-warn-name-shadowing -O3
  default-language:    Haskell2010

executable inverse
  main-is:             inverse.hs
  build-depends:       base,
                       boxes,
                       criterion,
                       extensive,
                       QuickCheck,
                       random
  extensions:          DataKinds,ScopedTypeVariables
  ghc-options:         -Wall -fno-warn-name-shadowing -O3 -threaded -fprof-auto
                       "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010


executable centre-exe
  main-is:             centre.hs
  build-depends:       base,
                       boxes,
                       criterion,
                       extensive,
                       QuickCheck,
                       random
  ghc-options: -Wall -fno-warn-name-shadowing -O3 -threaded
  default-language:    Haskell2010

executable symmetric-exe
  main-is:             symmetric.hs
  build-depends:       base,
                       algebra,
                       boxes,
                       criterion,
                       extensive,
                       QuickCheck,
                       random
  ghc-options: -Wall -fno-warn-name-shadowing -O3 -threaded
  default-language:    Haskell2010


executable electro-exe
  main-is:             electro.hs
  build-depends:       base,
                       algebra,
                       boxes,
                       criterion,
                       extensive,
                       QuickCheck,
                       random
  ghc-options: -Wall -fno-warn-name-shadowing -O3 -threaded
  default-language:    Haskell2010


