cabal-version:       2.4
name:                extensive
version:             0.1.0.0
synopsis:            Linear algebra following Anders Kock
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Finlay Thompson
maintainer:          finlay.thompson@gmail.com
copyright:           Finlay Thompson
category:            Math
build-type:          Simple

library
  exposed-modules:     Numeric.Extensive
                     , Numeric.Quaternion
                     , Numeric.Extensive.Core
                     , Numeric.Extensive.Inverse
                     , Numeric.Extensive.Print
  -- other-modules:
  build-depends:       base,
                       algebra,
                       QuickCheck,
                       mtl,
                       pretty,
                       boxes
  hs-source-dirs:      src

  ghc-options: -Wall -fno-warn-name-shadowing -O3
  default-language:    Haskell2010

executable jacobian-exe
  main-is:             app/jacobian.hs
  build-depends:       base,
                       extensive,
                       boxes

  ghc-options: -Wall -fno-warn-name-shadowing -O3 -threaded
  default-language:    Haskell2010

executable su3-exe
  main-is:             app/su3.hs
  build-depends:       base,
                       extensive,
                       boxes

  ghc-options: -Wall -fno-warn-name-shadowing -O3 -threaded
  default-language:    Haskell2010

